<resources>
    <string name="app_name">Contacts</string>
    <string name="male">Male</string>
    <string name="gender">Gender</string>
    <string name="female">FeMale</string>
    <string name="add">Add</string>
    <string name="enter_name">Enter name</string>
    <string name="enter_phone">Enter Phone</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="imgAvatarHelper">Click Me</string>
    <string name="call_or_message">Call Or Message</string>
    <string name="call">Call</string>
    <string name="send_message">Send Message</string>
</resources>